Add cache configuration for spring-cloud-contract:generateTests

--- a/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
+++ b/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
@@ -37,5 +37,158 @@
         </configuration>
       </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.gradle</groupId>
+          <artifactId>gradle-enterprise-maven-extension</artifactId>
+          <configuration>
+            <gradleEnterprise>
+              <plugins>
+                <plugin>
+                  <groupId>org.springframework.cloud</groupId>
+                  <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>default-generateTests</id>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <name>contractsDirectory</name>
+                            <excludesProperty>excludedFiles</excludesProperty>
+                            <includesProperty>includedFiles</includesProperty>
+                          </fileSet>
+                        </fileSets>
+                        <ignoredProperties>
+                          <ignore>contractsRepositoryPassword</ignore>
+                          <ignore>contractsRepositoryProxyHost</ignore>
+                          <ignore>contractsRepositoryProxyPort</ignore>
+                          <ignore>contractsRepositoryUsername</ignore>
+                          <ignore>project</ignore>
+                          <ignore>session</ignore>
+                          <ignore>repoSession</ignore>
+                          <ignore>incrementalContractTests</ignore>
+                          <ignore>mojoExecution</ignore>
+                        </ignoredProperties>
+                        <properties>
+                          <property>
+                            <name>assertJsonSize</name>
+                          </property>
+                          <property>
+                            <name>baseClassForTests</name>
+                          </property>
+                          <property>
+                            <name>basePackageForTests</name>
+                          </property>
+                          <property>
+                            <name>contractsMode</name>
+                          </property>
+                          <property>
+                            <name>contractsPath</name>
+                          </property>
+                          <property>
+                            <name>contractsProperties</name>
+                          </property>
+                          <property>
+                            <name>contractsRepositoryUrl</name>
+                          </property>
+                          <property>
+                            <name>deleteStubsAfterTest</name>
+                          </property>
+                          <property>
+                            <name>failOnInProgress</name>
+                          </property>
+                          <property>
+                            <name>failOnNoContracts</name>
+                          </property>
+                          <property>
+                            <name>ignoredFiles</name>
+                          </property>
+                          <property>
+                            <name>imports</name>
+                          </property>
+                          <property>
+                            <name>mavenTestSkip</name>
+                          </property>
+                          <property>
+                            <name>nameSuffixForTests</name>
+                          </property>
+                          <property>
+                            <name>packageWithBaseClasses</name>
+                          </property>
+                          <property>
+                            <name>ruleClassForTests</name>
+                          </property>
+                          <property>
+                            <name>skip</name>
+                          </property>
+                          <property>
+                            <name>skipTests</name>
+                          </property>
+                          <property>
+                            <name>staticImports</name>
+                          </property>
+                          <property>
+                            <name>testFramework</name>
+                          </property>
+                          <property>
+                            <name>testMode</name>
+                          </property>
+                        </properties>
+                      </inputs>
+                      <iteratedProperties>
+                        <property>
+                          <name>baseClassMappings</name>
+                          <inputs>
+                            <properties>
+                              <property>
+                                <name>baseClassFQN</name>
+                              </property>
+                              <property>
+                                <name>contractPackageRegex</name>
+                              </property>
+                            </properties>
+                          </inputs>
+                        </property>
+                      </iteratedProperties>
+                      <nestedProperties>
+                        <property>
+                          <name>contractDependency</name>
+                          <inputs>
+                            <properties>
+                              <property>
+                                <name>artifactId</name>
+                              </property>
+                              <property>
+                                <name>groupId</name>
+                              </property>
+                              <property>
+                                <name>version</name>
+                              </property>
+                            </properties>
+                          </inputs>
+                        </property>
+                      </nestedProperties>
+                      <outputs>
+                        <cacheableBecause>it produces randomized contract test cases</cacheableBecause>
+                        <directories>
+                          <directory>
+                            <name>generatedTestSourcesDir</name>
+                          </directory>
+                          <directory>
+                            <name>generatedTestResourcesDir</name>
+                          </directory>
+                        </directories>
+                      </outputs>
+                    </execution>
+                  </executions>
+                </plugin>
+              </plugins>
+            </gradleEnterprise>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
