--- a/maven-build-caching-samples/antlr3-project/pom.xml
+++ b/maven-build-caching-samples/antlr3-project/pom.xml
@@ -105,7 +105,7 @@
                         <name>outputDirectory</name>
                       </directory>
                     </directories>
-                    <cacheableBecause>All inputs and outputs declared</cacheableBecause>
+                    <cacheableBecause>generates consistent outputs for declared inputs</cacheableBecause>
                   </outputs>
                 </plugin>
               </plugins>
