--- a/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
+++ b/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
@@ -171,7 +171,7 @@
                         </property>
                       </nestedProperties>
                       <outputs>
-                        <cacheableBecause>it produces randomized contract test cases</cacheableBecause>
+                        <cacheableBecause>generateTests may produce randomized contract test cases</cacheableBecause>
                         <directories>
                           <directory>
                             <name>generatedTestSourcesDir</name>
