--- a/maven-build-caching-samples/pom.xml
+++ b/maven-build-caching-samples/pom.xml
@@ -14,10 +14,19 @@
     <module>pmd-project</module>
     <module>spotbugs-project</module>
     <module>antlr3-project</module>
+    <module>webstart-project</module>
+    <module>clojure-project</module>
+    <module>asciidoctor-project</module>
+    <module>animal-sniffer-project</module>
+    <module>enforcer-project</module>
+    <module>exec-yarn-project</module>
+    <module>spring-cloud-contract-project</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
