--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -18,6 +18,6 @@ jobs:
         SHELLCHECK_OPTS: -x
       with:
         sh_checker_comment: true
-        sh_checker_exclude: "gradlew mvnw experiments/lib/"
+        sh_checker_exclude: "gradlew mvnw build-validation-automation/scripts/src/lib"
         sh_checker_shfmt_disable: true
 
