--- a/maven-build-caching-samples/pmd-project/pom.xml
+++ b/maven-build-caching-samples/pmd-project/pom.xml
@@ -16,10 +16,15 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <version>3.14.0</version>
+        <configuration>
+          <format>txt</format>
+          <benchmark>true</benchmark>
+        </configuration>
         <executions>
           <execution>
             <goals>
               <goal>check</goal>
+              <goal>cpd-check</goal>
             </goals>
           </execution>
         </executions>
@@ -51,6 +56,10 @@
                             <includesProperty>includes</includesProperty>
                             <excludesProperty>excludes</excludesProperty>
                           </fileSet>
+                          <fileSet>
+                            <name>excludeFromFailureFile</name>
+                            <normalization>NAME_ONLY</normalization>
+                          </fileSet>
                         </fileSets>
 
                         <properties>
@@ -62,7 +71,6 @@
                           <property><name>sourceEncoding</name></property>
                           <property><name>includeXmlInSite</name></property>
                           <property><name>skipEmptyReport</name></property>
-                          <property><name>excludeFromFailureFile</name></property>
                           <property><name>jdkToolchain</name></property>
                           <property><name>targetJdk</name></property>
                           <property><name>language</name></property>
@@ -98,29 +106,118 @@
                           <ignore>xrefLocation</ignore>
                           <ignore>xrefTestLocation</ignore>
 
+                          <!-- Ignored because no single property represents each output reports. -->
+                          <!-- There is no way to automatically combine this property value and the 'format' into a single output file name. -->
+                          <ignore>targetDirectory</ignore>
+
                           <!-- This wil ignore the analysis cache if used, leaving it in place for subsequent invocations -->
                           <!-- It's not clear if this is actually correct, or if we should mark as <localState> to purge the analysisCache when loading results from the build cache -->
                           <!-- In general this is unimportant, since `clean` will remove the analysis cache. -->
                           <ignore>analysisCache</ignore>
                           <ignore>analysisCacheLocation</ignore>
-
-                          <!-- Ignored because we hard-code the outputs below. -->
-                          <!-- There is no way to automatically combine these 2 property values into a single output file name. -->
-                          <ignore>targetDirectory</ignore>
-                          <ignore>benchmarkOutputFilename</ignore>
                         </ignoredProperties>
                       </inputs>
                       <outputs>
                         <!-- There's no single property for each output file, so we must compose the path.
-                        These will need to be updated if <targetDirectory> or <benchmarkOutputFilename> are set. -->
+                        These will need to be updated if <targetDirectory> is updated. -->
                         <files>
                           <file>
-                            <name>pmdOutputFile</name>
+                            <name>xmlReport</name>
                             <path>${project.build.directory}/pmd.xml</path>
                           </file>
                           <file>
-                            <name>pmdBenchmarkFile</name>
-                            <path>${project.build.directory}/pmd-benchmark.txt</path>
+                            <name>txtReport</name>
+                            <path>${project.build.directory}/pmd.txt</path>
+                          </file>
+                          <file>
+                            <name>csvReport</name>
+                            <path>${project.build.directory}/pmd.csv</path>
+                          </file>
+                          <file>
+                            <name>benchmarkOutputFilename</name>
+                          </file>
+                        </files>
+                        <cacheableBecause>generates consistent outputs for declared inputs</cacheableBecause>
+                      </outputs>
+                    </execution>
+                    <execution>
+                      <id>cpd</id>
+                      <inputs>
+                        <fileSets>
+                          <fileSet>
+                            <name>compileSourceRoots</name>
+                            <includesProperty>includes</includesProperty>
+                            <excludesProperty>excludes</excludesProperty>
+                          </fileSet>
+                          <fileSet>
+                            <name>testSourceRoots</name>
+                            <includesProperty>includes</includesProperty>
+                            <excludesProperty>excludes</excludesProperty>
+                          </fileSet>
+                          <fileSet>
+                            <name>excludeFromFailureFile</name>
+                            <normalization>NAME_ONLY</normalization>
+                          </fileSet>
+                        </fileSets>
+                        <properties>
+                          <property><name>skip</name></property>
+                          <property><name>format</name></property>
+                          <property><name>linkXRef</name></property>
+                          <property><name>includeTests</name></property>
+                          <property><name>aggregate</name></property>
+                          <property><name>sourceEncoding</name></property>
+                          <property><name>includeXmlInSite</name></property>
+                          <property><name>skipEmptyReport</name></property>
+                          <property><name>language</name></property>
+                          <property><name>jdkToolchain</name></property>
+
+                          <property><name>ignoreAnnotations</name></property>
+                          <property><name>ignoreLiterals</name></property>
+                          <property><name>ignoreIdentifiers</name></property>
+                          <property><name>minimumTokens</name></property>
+
+                        </properties>
+                        <ignoredProperties>
+                          <!-- Ignore property that has no impact on plugin outputs -->
+                          <ignore>showPmdLog</ignore>
+
+                          <!-- Maven session state cannot be part of cache key -->
+                          <ignore>session</ignore>
+
+                          <!-- Maven project state cannot be part of cache key. -->
+                          <!-- NOTE: This could result in an incorrect cache hit for an aggregate report if the set
+                                     of projects in the reactor has changed. -->
+                          <ignore>reactorProjects</ignore>
+
+                          <!-- NOTE: Not really correct to ignore these: this means that excluded roots will be included in the cache key,
+                                     so changes in an excluded root will result in cache misses. -->
+                          <ignore>excludeRoots</ignore>
+
+                          <!-- NOTE: It's not quite correct to ignore these values. This means that if _only_ these values are changed,
+                                     an invalid cache hit would result, producing the old report without the correct xref. -->
+                          <ignore>xrefLocation</ignore>
+                          <ignore>xrefTestLocation</ignore>
+
+                          <!-- Ignored because no single property represents each output reports. -->
+                          <!-- There is no way to automatically combine this property value and the 'format' into a single output file name. -->
+                          <ignore>targetDirectory</ignore>
+                        </ignoredProperties>
+                      </inputs>
+                      <outputs>
+                        <!-- There's no single property for each output file, so we must compose the path.
+                        These will need to be updated if <targetDirectory> is updated. -->
+                        <files>
+                          <file>
+                            <name>xmlReport</name>
+                            <path>${project.build.directory}/cpd.xml</path>
+                          </file>
+                          <file>
+                            <name>txtReport</name>
+                            <path>${project.build.directory}/cpd.txt</path>
+                          </file>
+                          <file>
+                            <name>csvReport</name>
+                            <path>${project.build.directory}/cpd.csv</path>
                           </file>
                         </files>
                         <cacheableBecause>generates consistent outputs for declared inputs</cacheableBecause>
@@ -134,6 +231,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
   </build>
 </project>
