--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Publish Build Validation Scripts
 
-# Controls when the action will run. 
 on: workflow_dispatch
+
+jobs:
+  publish:
+    runs-on: ubunto-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: jhurne/experiment-automation
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: ./gradlew build
+        working-directory: build-validation/distribution-build
+      - name: Commit and push updated archives
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update build validation script archives"
+          git push origin HEAD
