--- a/.github/workflows/release-build-validation-scripts.yml
+++ b/.github/workflows/release-build-validation-scripts.yml
@@ -3,7 +3,7 @@ name: Release Build Validation Scripts
 on: workflow_dispatch
 
 jobs:
-  publish:
+  prerelease:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@v1.2.0"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "build-validation-latest"
+          automatic_release_tag: "build-validation-latest-development"
           prerelease: true
-          title: "Development Build"
+          title: "Build Validation - Development Build"
           files: "build-validation/*.zip"
