Fix typo in PGP_SIGNING_KEY env var name

--- a/common-custom-user-data-gradle-plugin/build.gradle
+++ b/common-custom-user-data-gradle-plugin/build.gradle
@@ -52,7 +52,7 @@ signing {
     required providers.environmentVariable("CI").forUseAtConfigurationTime().isPresent()
 
     useInMemoryPgpKeys(
-        providers.environmentVariable("PGP_SINGING_KEY").forUseAtConfigurationTime().orNull,
+        providers.environmentVariable("PGP_SIGNING_KEY").forUseAtConfigurationTime().orNull,
         providers.environmentVariable("PGP_SIGNING_KEY_PASSPHRASE").forUseAtConfigurationTime().orNull)
 
     sign(configurations.archives)
