Add global enabling of build caching

--- a/gradle-enterprise-conventions-gradle-plugin/init-script/add-gradle-enterprise-conventions.gradle
+++ b/gradle-enterprise-conventions-gradle-plugin/init-script/add-gradle-enterprise-conventions.gradle
@@ -37,6 +37,10 @@ initscript {
     }
 }
 
+// Enable build cache
+// Only available for Gradle 3.5+, so invoked defensively
+startParameter.metaClass.getMetaProperty("buildCacheEnabled")?.setProperty(startParameter, true)
+
 def isTopLevelBuild = gradle.getParent() == null
 if (!isTopLevelBuild) {
     return
