--- a/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
+++ b/maven-build-caching-samples/spring-cloud-contract-project/pom.xml
@@ -28,6 +28,26 @@
         <extensions>true</extensions>
         <configuration></configuration>
       </plugin>
+      <!-- When resolving from cache, need to explicitly register generated test sources -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>target/generated-test-sources/contracts</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <!-- We don't have a real app, so generate the contract tests, but skip running them -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
