--- a/.github/workflows/gradle-smoke-test.yml
+++ b/.github/workflows/gradle-smoke-test.yml
@@ -5,6 +5,21 @@ on: [push]
 jobs:
     build:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                include:
+                    - sample-folder: "capture-dependency-resolution"
+                      sample-build-file: "gradle-dependency-resolution.gradle"
+                    - sample-folder: "capture-git-diffs"
+                      sample-build-file: "gradle-git-diffs.gradle"
+                    - sample-folder: "capture-os-processes"
+                      sample-build-file: "gradle-os-processes.gradle"
+                    - sample-folder: "capture-quality-check-issues"
+                      sample-build-file: "gradle-quality-check-issues.gradle"
+                    - sample-folder: "capture-slow-workunit-executions"
+                      sample-build-file: "gradle-slow-task-executions.gradle"
+                    - sample-folder: "capture-test-execution-system-properties"
+                      sample-build-file: "gradle-test-execution-system-properties.gradle"
 
         steps:
             - uses: actions/checkout@v2
@@ -16,24 +31,24 @@ jobs:
             - name: Build CCUD Gradle plugin
               run: ./gradlew build -x signArchives
               working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-dependency-resolution sample
-              run: ./gradlew tasks -b ../capture-dependency-resolution/gradle-dependency-resolution.gradle
+            - name: Run Gradle smoke test on sample
+              env:
+                  FOLDER: ${{ matrix.sample-folder }}
+                  GRADLE_BUILD_FILE: ${{ matrix.sample-build-file }}
+              run: ./gradlew tasks -b ../$FOLDER/$GRADLE_BUILD_FILE
               working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-git-diffs
-              run: ./gradlew tasks -b ../capture-git-diffs/gradle-git-diffs.gradle
-              working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-os-processes
-              run: ./gradlew tasks -b ../capture-os-processes/gradle-os-processes.gradle
-              working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-quality-check-issues
-              run: ./gradlew tasks -b ../capture-quality-check-issues/gradle-quality-check-issues.gradle
-              working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-slow-workunit-executions
-              run: ./gradlew tasks -b ../capture-slow-workunit-executions/gradle-slow-task-executions.gradle
-              working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-test-execution-system-properties
-              run: ./gradlew tasks -b ../capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle
-              working-directory: common-custom-user-data-gradle-plugin
-            - name: Run Gradle smoke test on capture-top-level-project
-              run: ./gradlew tasks -b ../capture-top-level-project/gradle-top-level-project.gradle
-              working-directory: common-custom-user-data-gradle-plugin
+#            - name: Run Gradle smoke test on capture-git-diffs
+#              run: ./gradlew tasks -b ../capture-git-diffs/gradle-git-diffs.gradle
+#              working-directory: common-custom-user-data-gradle-plugin
+#            - name: Run Gradle smoke test on capture-os-processes
+#              run: ./gradlew tasks -b ../capture-os-processes/gradle-os-processes.gradle
+#              working-directory: common-custom-user-data-gradle-plugin
+#            - name: Run Gradle smoke test on capture-quality-check-issues
+#              run: ./gradlew tasks -b ../capture-quality-check-issues/gradle-quality-check-issues.gradle
+#              working-directory: common-custom-user-data-gradle-plugin
+#            - name: Run Gradle smoke test on capture-slow-workunit-executions
+#              run: ./gradlew tasks -b ../capture-slow-workunit-executions/gradle-slow-task-executions.gradle
+#              working-directory: common-custom-user-data-gradle-plugin
+#            - name: Run Gradle smoke test on capture-test-execution-system-properties
+#              run: ./gradlew tasks -b ../capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle
+#              working-directory: common-custom-user-data-gradle-plugin
