--- a/.github/workflows/gradle-smoke-test.yml
+++ b/.github/workflows/gradle-smoke-test.yml
@@ -3,7 +3,22 @@ name: Gradle smoke test
 on: [push]
 
 jobs:
-    build:
+    build-ccud:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set up JDK 11
+              uses: actions/setup-java@v2
+              with:
+                  java-version: '11'
+                  distribution: 'adopt'
+            - name: Build CCUD Gradle plugin
+              run: ./gradlew build -x signArchives
+              working-directory: common-custom-user-data-gradle-plugin
+
+    verify-samples:
+        needs: build-ccud
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -22,33 +37,9 @@ jobs:
                       sample-build-file: "gradle-test-execution-system-properties.gradle"
 
         steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK 11
-              uses: actions/setup-java@v2
-              with:
-                  java-version: '11'
-                  distribution: 'adopt'
-            - name: Build CCUD Gradle plugin
-              run: ./gradlew build -x signArchives
-              working-directory: common-custom-user-data-gradle-plugin
             - name: Run Gradle smoke test on sample
               env:
                   FOLDER: ${{ matrix.sample-folder }}
                   GRADLE_BUILD_FILE: ${{ matrix.sample-build-file }}
               run: ./gradlew tasks -b ../$FOLDER/$GRADLE_BUILD_FILE
               working-directory: common-custom-user-data-gradle-plugin
-#            - name: Run Gradle smoke test on capture-git-diffs
-#              run: ./gradlew tasks -b ../capture-git-diffs/gradle-git-diffs.gradle
-#              working-directory: common-custom-user-data-gradle-plugin
-#            - name: Run Gradle smoke test on capture-os-processes
-#              run: ./gradlew tasks -b ../capture-os-processes/gradle-os-processes.gradle
-#              working-directory: common-custom-user-data-gradle-plugin
-#            - name: Run Gradle smoke test on capture-quality-check-issues
-#              run: ./gradlew tasks -b ../capture-quality-check-issues/gradle-quality-check-issues.gradle
-#              working-directory: common-custom-user-data-gradle-plugin
-#            - name: Run Gradle smoke test on capture-slow-workunit-executions
-#              run: ./gradlew tasks -b ../capture-slow-workunit-executions/gradle-slow-task-executions.gradle
-#              working-directory: common-custom-user-data-gradle-plugin
-#            - name: Run Gradle smoke test on capture-test-execution-system-properties
-#              run: ./gradlew tasks -b ../capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle
-#              working-directory: common-custom-user-data-gradle-plugin
