--- a/.github/workflows/gradle-smoke-test.yml
+++ b/.github/workflows/gradle-smoke-test.yml
@@ -37,6 +37,12 @@ jobs:
                       sample-build-file: "gradle-test-execution-system-properties.gradle"
 
         steps:
+            - uses: actions/checkout@v2
+            - name: Set up JDK 11
+              uses: actions/setup-java@v2
+              with:
+                  java-version: '11'
+                  distribution: 'adopt'
             - name: Run Gradle smoke test on sample
               env:
                   FOLDER: ${{ matrix.sample-folder }}
